test/fail/arraychar.min
program
    array x[2] := 2, '\n'
start
end
